version: current
changes:
  - about screen changed
---
version: 0.12.2b
changes:
  - Basic functionality 